--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,15 @@
 {
     "name": "Arrows Wallpaper",
     "short_name": "Arrows",
-    "description": "Arrows Wallpaper Pattern Search",
+    "icons": [
+        {
+            "src": "logo-arrows.jpg",
+            "sizes": "any",
+            "type": "image/jpeg"
+        }
+    ],
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#1e3a8a",
-    "icons": [
-        {
-            "src": "/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
-    ]
+    "theme_color": "#ffffff"
 } 
